# voidsprite

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  AppImageBuilder.yml  CMakeLists.txt  CONTRIBUTORS.txt  README.md  copy_assets.bat  copy_devlibs.bat  freesprite.sln  gen_unity_build.sh  linux_build.sh  mac_build.sh  mac_make_app.sh  make_sdk.ps1  meson.build  meson_options.txt  setup_android.bat  setup_android_on_linux.sh  setup_appimage.sh  setup_emscripten.sh  setup_windows_devlibs.bat  tree_output.txt
.github/: FUNDING.yml
.github/workflows/: android-build.yml  c-cpp.yml  make-release.yml  msbuild.yml  windows-build.yml
FORMAT_DOCUMENTATION/: README.MD  voidsn.hexpat
OPEN_SOURCE_LICENSES/: License_AndroidDeviceNames.txt  License_astc_dec.txt  License_avif.txt  License_libbzip2.txt  License_libtga.txt  OFL.txt
android-project/: build.gradle  local.properties
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/jni/src/: Android.mk  CMakeLists.txt  YourSourceHere.cpp
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/drawable/: ic_main.xml
android-project/app/src/main/res/drawable-v30/: ic_main.xml
android-project/app/src/main/res/values/: strings.xml
android-project/app/src/main/res/xml/: vsp_file_provider_paths.xml
cmake/: AppImageBuilder.yml  CMakeLists.txt  copy_dependencies.cmake  setup_appimage.sh  setup_cmake.sh  setup_emscripten.sh
cmake/src/: CMakeLists.txt
community-content/: vsp_88x31.avif
community-content/FORMAT_DOCUMENTATION/: README.MD
community-content/community-patterns/: OfficialPatterns.rar  README.md
community-content/community-templates/: README.md
community-patterns/: README.md  bricks.pbm
community-templates/: README.md
enc_temp_folder/353c2ba9b15ba5790137171176ebf/: GlobalNavBar.cpp
enc_temp_folder/c2926c03ca31837e21c4d0ad6b70bc/: GlobalNavBar.cpp
external_liblcf/: CMakeLists.txt  external_liblcf.vcxproj  external_liblcf.vcxproj.filters  reader_lcf.cpp
external_liblcf/lcf/: dbbitarray.h
freesprite/: ASCIIEditor.cpp  ASCIIEditor.h  BaseBrush.cpp  BaseBrush.h  BaseFilter.cpp  BaseFilter.h  BasePopup.cpp  BasePopup.h  BaseScreen.cpp  BaseScreen.h  BaseTemplate.cpp  BaseTemplate.h  Brush1pxLine.cpp  Brush1pxLine.h  Brush1pxLinePathfind.cpp  Brush1pxLinePathfind.h  Brush1x1.cpp  Brush1x1.h  Brush1x1ArcX.cpp  Brush1x1ArcX.h  Brush1x1ArcY.cpp  Brush1x1ArcY.h  Brush3pxCircle.cpp  Brush3pxCircle.h  Brush9SegmentRect.cpp  Brush9SegmentRect.h  BrushBezierLine.cpp  BrushBezierLine.h  BrushCircle.cpp  BrushCircle.h  BrushDiamond.cpp  BrushDiamond.h  BrushFill.cpp  BrushFill.h  BrushRect.cpp  BrushRect.h  BrushRectFill.cpp  BrushRectFill.h  BrushReplaceColor.cpp  BrushReplaceColor.h  (+333 more)
freesprite/astc_dec/: astc_decomp.cpp  astc_decomp.h
freesprite/brush/: BaseBrush.cpp  BaseBrush.h  Brush1pxLine.cpp  Brush1pxLine.h  Brush1pxLinePathfind.cpp  Brush1pxLinePathfind.h  Brush1x1.cpp  Brush1x1.h  Brush1x1ArcX.cpp  Brush1x1ArcY.cpp  Brush3pxCircle.cpp  Brush9SegmentRect.cpp  Brush9SegmentRect.h  BrushBezierLine.cpp  BrushBezierLine.h  BrushCircle.cpp  BrushCircle.h  BrushCurve.cpp  BrushCurve.h  BrushDiamond.cpp  BrushDiamond.h  BrushFill.cpp  BrushFill.h  BrushRect.cpp  BrushRect.h  BrushRectFill.cpp  BrushRectFill.h  BrushReplaceColor.cpp  BrushReplaceColor.h  BrushScatter.cpp  BrushScatter.h  ToolColorPicker.cpp  ToolColorPicker.h  ToolComment.cpp  ToolComment.h  ToolGuideline.cpp  ToolGuideline.h  ToolMeasure.cpp  ToolMeasure.h  ToolRectClone.cpp  (+16 more)
freesprite/discord_game_sdk/: discord_all.cpp
freesprite/easybmp/: EasyBMP.cpp  EasyBMP_BMP.h  meson.build
freesprite/gzip/: decompress.hpp
freesprite/io/: io_anymap.cpp  io_anymap.h  io_aseprite.cpp  io_aseprite.h  io_astc.cpp  io_astc.h  io_avi.cpp  io_avi.h  io_avif.cpp  io_avif.h  io_base.h  io_dibv5.cpp  io_dibv5.h  io_flipnote.cpp  io_flipnote.h  io_gamemaker.cpp  io_gamemaker.h  io_gif.cpp  io_gif.h  io_gim.cpp  io_gim.h  io_godot.cpp  io_godot.h  io_graphicsgale.cpp  io_graphicsgale.h  io_iw.cpp  io_iw.h  io_jsonformats.cpp  io_jsonformats.h  io_jxl.cpp  io_jxl.h  io_lpe.cpp  io_lpe.h  io_openraster.cpp  io_openraster.h  io_palettes.cpp  io_palettes.h  io_pep.cpp  io_pep.h  io_piskel.cpp  (+21 more)
freesprite/libbzip2/: bzlib.c  bzlib_private.h
freesprite/liblcf/: ldb_reader.cpp  lmt_reader.cpp  lsd_reader.cpp  meson.build
freesprite/libtga/: meson.build  tga.c  tga.h  tga_private.h  tgaread.c  tgawrite.c
freesprite/linux/: com.github.counter185.voidsprite.desktop  com.github.counter185.voidsprite.metainfo.xml  meson.build  voidsn.xml  voidsprite.thumbnailer  voidsprite_thumbnailer
freesprite/linux/flatpak/: README.md  SDL3.json  SDL3_image.json  SDL3_net.json  SDL3_ttf.json  com.github.counter185.voidsprite.yml  liblcf.json
freesprite/localization/: README.MD  localization.cpp  localization.h  localization_english.txt  localization_japanese.txt  localization_romanian.txt  update_localization.py
freesprite/pep/: pep.h
gcc-build/: Makefile  build.sh  build_linux.sh  build_windows.sh  build_windows_32bit.sh  build_windows_xp.sh
lib/discord_game_sdk/: CMakeLists.txt  discord_game_sdk-config.cmake  types.h
lib/liblcf/: CMakeLists.txt  external_liblcf.vcxproj  liblcf-config.cmake  lmu_reader.cpp  meson.build  reader_util.cpp
lib/liblcf/lcf/: config.h
lib/libpng/: CMakeLists.txt  libpng-config.cmake  pngpriv.h  pngrtran.c  pngrutil.c
mac-build-resources/: Info.plist
subprojects/: easybmp  liblcf  libtga  sdl2_ttf.wrap  sdl3.wrap  sdl3_image.wrap  sdl3_ttf.wrap
voidsprite_plugin_sample/: dllmain.cpp  sdk_structs.h  voidsprite_plugin_sample.vcxproj  voidsprite_plugin_sample.vcxproj.filters  voidsprite_sdk.cpp  voidsprite_sdk.h
voidsprite_shellext/: dllmain.cpp  voidsn_read.cpp  voidsn_read.h  voidsprite_shellext.vcxproj  voidsprite_shellext.vcxproj.filters  win32_boilerplate.cpp  win32_boilerplate.h
voidsprite_updater/: Program.cs  voidsprite_updater.csproj
voidsprite_updater/Properties/: AssemblyInfo.cs
web-build/: index.html
(+8 files in other folders)
