option('portable', type : 'boolean', value : false,
       description : 'Make a portable build (store assets in the same directory as the binary)')

option('flatpak', type : 'boolean', value: false,
	   description : 'Flatpak build')

option('githash', type : 'string', value: '',
          description : 'Current git hash for update tracking')