cmake_minimum_required(VERSION 3.12)

project(my_app)

option(USE_FMT_FORMAT "Use fmt::format instead of std::format" OFF)
option(VOIDSPRITE_UNITY_BUILD "Use unity build" ON)
option(VSP_DISCORD_RPC "Enable Discord RPC. Only for x64 Linux (for Windows use the VS sln)" OFF)
option(RELEASE "Compiler optimizations. Disable for DEBUG options" ON)
set(VOIDSPRITE_ASSETS_PATH "" CACHE STRING "Path to voidsprite assets. Executable directory if empty")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (USE_FMT_FORMAT)
    add_definitions(-DUSE_FMT_FORMAT=1)
    if(NOT TARGET fmt)
        find_package(fmt CONFIG)
    endif()
endif()

if (VSP_DISCORD_RPC)
    add_definitions(-DVSP_DISCORD_RPC=1)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-rpath,${CMAKE_CURRENT_SOURCE_DIR} -L${CMAKE_CURRENT_SOURCE_DIR} -ldiscord_game_sdk_linux_x64")
endif()

if (RELEASE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1")
else()
    add_definitions(-D_DEBUG=1)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -fdiagnostics-show-option -w -Wno-c++11-narrowing")

add_definitions(-DVSP_USE_LIBAVIF=1)
add_definitions(-DVOIDSPRITE_JXL_ENABLED=0)

if(DEFINED ENV{GIT_HASH})
    add_definitions(-DGIT_HASH="$ENV{GIT_HASH}")
endif()
if(DEFINED ENV{GIT_BRANCH})
    add_definitions(-DGIT_BRANCH="$ENV{GIT_BRANCH}")
endif()

if(NOT TARGET SDL3::SDL3)
    find_package(SDL3 CONFIG)
endif()
if(NOT TARGET SDL3_ttf::SDL3_ttf)
    find_package(SDL3_ttf CONFIG)
endif()
if(NOT TARGET SDL3_image::SDL3_image)
    find_package(SDL3_image CONFIG)
endif()

if(NOT TARGET SDL3_net::SDL3_net)
    find_package(SDL3_net CONFIG)
endif()

if(NOT TARGET lcf)
    find_package(lcf CONFIG)
endif()
if(NOT TARGET zlib)
    find_package(zlib CONFIG)
endif()
if(NOT TARGET avif)
    find_package(avif CONFIG)
endif()

if(NOT TARGET SDL3::SDL3)
    find_library(SDL3_LIBRARY NAMES "SDL3")
    find_path(SDL3_INCLUDE_DIR NAMES "SDL3/SDL.h")
    add_library(SDL3::SDL3 UNKNOWN IMPORTED)
    set_property(TARGET SDL3::SDL3 PROPERTY IMPORTED_LOCATION "${SDL3_LIBRARY}")
    set_property(TARGET SDL3::SDL3 PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_INCLUDE_DIR}")
endif()
if(NOT TARGET SDL3_ttf::SDL3_ttf)
    find_library(SDL3_TTF_LIBRARY NAMES "SDL3_ttf")
    find_path(SDL3_TTF_INCLUDE_DIR NAMES "SDL3_ttf/SDL_ttf.h")
    add_library(SDL3_ttf::SDL3_ttf UNKNOWN IMPORTED)
    set_property(TARGET SDL3_ttf::SDL3_ttf PROPERTY IMPORTED_LOCATION "${SDL3_TTF_LIBRARY}")
    set_property(TARGET SDL3_ttf::SDL3_ttf PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_TTF_INCLUDE_DIR}")
endif()
if(NOT TARGET SDL3_image::SDL3_image)
    find_library(SDL3_IMAGE_LIBRARY NAMES "SDL3_image")
    find_path(SDL3_IMAGE_INCLUDE_DIR NAMES "SDL3_image/SDL_image.h")
    add_library(SDL3_image::SDL3_image UNKNOWN IMPORTED)
    set_property(TARGET SDL3_image::SDL3_image PROPERTY IMPORTED_LOCATION "${SDL3_IMAGE_LIBRARY}")
    set_property(TARGET SDL3_image::SDL3_image PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_IMAGE_INCLUDE_DIR}")
endif()
if(NOT TARGET SDL3_net::SDL3_net)
    find_library(SDL3_IMAGE_LIBRARY NAMES "SDL3_net")
    find_path(SDL3_IMAGE_INCLUDE_DIR NAMES "SDL3_net/SDL3_net.h")
    add_library(SDL3_net::SDL3_net UNKNOWN IMPORTED)
    set_property(TARGET SDL3_net::SDL3_net PROPERTY IMPORTED_LOCATION "${SDL3_NET_LIBRARY}")
    set_property(TARGET SDL3_net::SDL3_net PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${SDL3_NET_INCLUDE_DIR}")
endif()

if(NOT TARGET SDL3::SDL3)
    message(FATAL_ERROR "Cannot find SDL3.

Possible ways to fix this:
- Use a SDL3 Android aar archive, and configure gradle to use it: prefab is required.
- Add add_subdirectory(path/to/SDL) to your CMake script, and make sure a vendored SDL is present there.
")
endif()

file(COPY ../freesprite/assets DESTINATION "${CMAKE_BINARY_DIR}/cmake")
file(COPY ../freesprite/appfont-MPLUSRounded1c-Medium.ttf DESTINATION "${CMAKE_BINARY_DIR}/cmake")
file(COPY ../freesprite/appfontcyr-ZenKakuGothicNew-Medium.ttf DESTINATION "${CMAKE_BINARY_DIR}/cmake")

if (DEFINED EMSCRIPTEN)
    add_definitions(-DVSP_NETWORKING=0)
    add_definitions(-DVSP_USE_LIBLCF=0)
    set(CMAKE_EXECUTABLE_SUFFIX ".html")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -sMALLOC=emmalloc -sALLOW_MEMORY_GROWTH=1 -sEXPORTED_RUNTIME_METHODS=FS -fexceptions")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --embed-file ${CMAKE_BINARY_DIR}/cmake/assets@assets")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --embed-file ${CMAKE_BINARY_DIR}/cmake/appfont-MPLUSRounded1c-Medium.ttf")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --embed-file ${CMAKE_BINARY_DIR}/cmake/appfontcyr-ZenKakuGothicNew-Medium.ttf")
endif()
if (FLATPAK)
    set(VOIDSPRITE_ASSETS_PATH "${CMAKE_INSTALL_PREFIX}/share/voidsprite")
endif()

file(GLOB_RECURSE CPP_FILES CONFIGURE_DEPENDS "../freesprite/*.cpp")
file(GLOB_RECURSE C_FILES CONFIGURE_DEPENDS "../freesprite/*.c")

if(NOT VOIDSPRITE_ASSETS_PATH STREQUAL "")
    add_compile_definitions(VOIDSPRITE_ASSETS_PATH="${VOIDSPRITE_ASSETS_PATH}/")
endif()

add_executable(voidsprite
        ${CPP_FILES}
        ${C_FILES}
)
if(VOIDSPRITE_UNITY_BUILD)
    set_source_files_properties(${C_FILES} PROPERTIES SKIP_UNITY_BUILD_INCLUSION true)
    set_property(TARGET voidsprite PROPERTY UNITY_BUILD true)
    set_property(TARGET voidsprite PROPERTY UNITY_BUILD_MODE BATCH)
    if (FLATPAK)
        #flatpak builder is single threaded so just build all of it at once
        set_property(TARGET voidsprite PROPERTY UNITY_BUILD_BATCH_SIZE 500)
    else()
        set_property(TARGET voidsprite PROPERTY UNITY_BUILD_BATCH_SIZE 40)
    endif()
endif()

target_link_libraries(voidsprite PRIVATE SDL3::SDL3)
target_link_libraries(voidsprite PRIVATE SDL3_ttf::SDL3_ttf)
target_link_libraries(voidsprite PRIVATE SDL3_image::SDL3_image)
target_link_libraries(voidsprite PRIVATE avif)
if (NOT DEFINED EMSCRIPTEN)
    target_link_libraries(voidsprite PRIVATE SDL3_net::SDL3_net)
    #if (NOT FLATPAK)
        target_link_libraries(voidsprite PRIVATE lcf)
    #endif()
endif()
target_link_libraries(voidsprite PRIVATE ZLIB::ZLIBSTATIC)
if (USE_FMT_FORMAT)
    target_link_libraries(voidsprite PRIVATE fmt)
endif()

if (FLATPAK)
    install(TARGETS voidsprite DESTINATION bin)
    install(DIRECTORY "${CMAKE_BINARY_DIR}/cmake/assets" DESTINATION share/voidsprite)
    install(FILES "${CMAKE_BINARY_DIR}/cmake/appfont-MPLUSRounded1c-Medium.ttf" DESTINATION share/voidsprite)
    install(FILES "${CMAKE_BINARY_DIR}/cmake/appfontcyr-ZenKakuGothicNew-Medium.ttf" DESTINATION share/voidsprite)
    
    #does not work on flatpak
    if (VSP_DISCORD_RPC)
        install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/libdiscord_game_sdk_linux_x64.so" DESTINATION lib)
    endif()
endif() 
